# termem

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  README.md  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: pages.json  wrangler-account.json
landing/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
landing/src/: App.tsx  index.css  main.tsx
landing/src/components/: ThemeToggle.tsx  brand.tsx  renders.tsx  window.tsx
landing/src/components/live/: CodeBlock.tsx  Terminal.tsx  Window.tsx
landing/src/components/motion/: Reveal.tsx
landing/src/components/ui/: badge.tsx  button.tsx
landing/src/hooks/: useDownloads.ts
landing/src/lib/: highlighter.ts
npm/: README.md  publish.sh  reserve.sh
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/termem/: SKILL.md
site/: _worker.js  index.html
skill/: SKILL.md
src/: board.rs  index.rs  lib.rs  logo.rs  main.rs  mcp.rs  memory.rs  model.rs  query.rs  resume.rs  shellhook.rs  transcript.rs  tui.rs  wrappers.rs
src/scan/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  shell.rs
tests/: integration.rs  mcp.rs
