[package]
name = "termem"
version = "0.5.1"
edition = "2021"
description = "Terminal memory: index and resume Claude Code, Codex, and shell sessions by directory"
license = "MIT"

[[bin]]
name = "termem"
path = "src/main.rs"

[lib]
name = "termem"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2.5"
rayon = "1.10"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
strip = true
