[package]
name = "termem"
version = "0.6.0"
edition = "2021"
description = "Cross-agent terminal memory and session management: recall, search, and resume Claude Code, Codex, Gemini, opencode, and shell sessions by directory."
license = "MIT"
repository = "https://github.com/leox255/termem"
homepage = "https://github.com/leox255/termem"
readme = "README.md"
keywords = ["mcp", "memory", "sessions", "cli", "terminal"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "plugin/skills/termem/SKILL.md",
]

[[bin]]
name = "termem"
path = "src/main.rs"

[lib]
name = "termem"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2.5"
rayon = "1.10"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
strip = true
